--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "14.0.3",
     "postcss": "^8.4.32",
-    "sass": "^1.74.1"
+    "sass": "^1.74.1",
+    "typescript": "5.8.2"
   }
 }
